--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,7 @@
 [profile.default]
+via_ir = true
+optimizer = true
+optimizer_runs = 200
 src = "src"
 out = "out"
 libs = ["lib"]
@@ -6,5 +9,14 @@ ffi = true
 ast = true
 build_info = true
 extra_output = ["storageLayout"]
+remappings = [
+	"forge-std/=lib/forge-std/src/",
+	'@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+	'@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/' 
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+sepolia = "https://open-campus-codex-sepolia.drpc.org"
+educhain = "https://rpc.edu-chain.raas.gelato.cloud"
+educhain-testnet="https://open-campus-codex-sepolia.drpc.org"
